--- a/css/data.css
+++ b/css/data.css
@@ -1,78 +1,30 @@
-
-body{
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-    flex-direction: column;
+table {
+	margin-top: 20px;
+	font-family: arial, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
 }
 
+td,
+th {
+	border: 1px solid #dddddd;
+	text-align: left;
+	padding: 8px;
+}
 
+tr:nth-child(even) {
+	background-color: #dddddd;
+}
+
+.code-description {
+    margin-top: 20px;
+    font-size: 20px;
+}
 
 .download-button{
-    background-color: tomato;
-    border: none;
-    color: greenyellow;
-    width: 150px;
-    height: 40px;
-    font-weight: 700;
-    border-radius: 5px;
-    position: relative;
-    padding: 0;
-    overflow: hidden;
-    display: flex;
+    margin-top: 10px;
 }
 
-
-
-.arrow{
-    width: 25%;
-    height: 100%;
-    right: 0;
-    top:0;
-    background-color: greenyellow;
-    position: relative;
-    transition: width 0.2s;
-}
-
-.arrow::before{
-    position: absolute;
-    content: '';
-    width: 10px;
-    height: 10px;
-    left:50%;
-    bottom: 20px;
-    background-color: transparent;
-    transform: translate(-50%, 50%) rotate(45deg);
-    border-bottom: 3px solid rgb(0, 0, 0);
-    border-right: 3px solid rgb(0, 0, 0);
-}
-
-.arrow::after{
-    position: absolute;
-    content: '';
-    width: 3px;
-    height: 15px;
-    left:50%;
-    bottom: 22px;
-    background-color: black;
-    transform: translate(-50%, 50%) ;
-  
-}
-
-.button-text{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 75%;
-    height: 100%;
-    left: 0;
-    top:0;
-    background-color: rgb(228, 110, 0);
-}
-
-.button-text:hover ~ .arrow{
-    width: 30%;
-    cursor:pointer;
+.codes{
+    margin-left: 20px;
 }
