--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,47 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700;900&display=swap');
+
+:root{
+	--bgImage: url(../img/transport.jpg);
+	--fontColor: rgb(255, 255, 255);
+}
 
 body {
-	background: rgb(55, 224, 253);
+	background: rgb(255, 255, 255);
 	text-align: center;
-	font-family: "Montserrat", sans-serif;
+	font-family: 'Poppins', sans-serif;
+	color:var(--fontColor)
 }
 * {
 	box-sizing: border-box;
+	margin: 0;
 }
 
 .main-container {
 	margin-top: 50px;
-}
-
-.form-box,
-.info-box {
-	background-color: #fff;
-	display: inline-block;
-	border-radius: 7px;
-}
-
-.form-box {
-	width: 600px;
-}
-.info-box {
-	margin-top: 20px;
-	width: 400px;
-	padding-left: 40px;
-	padding-right: 40px;
+	width: 100%;
+  min-height: 75vh;
 }
 
 
-
-.form-object {
-	display: none;
-}
-
-.btn-tmp {
-	margin-top: 20px;
-	background-color: #fff;
-	border-radius: 5px;
-	border: 0;
-}
-.btn-tmp:hover {
-	background-color: rgba(255, 255, 255, 0.856);
-}
-
-.form-object {
-	margin-bottom: 20px;
-}
-
-p {
-	margin-bottom: 0;
-}
-
-.category-name {
-	color: rgb(255, 255, 255);
-}
-
-.page-number {
-	color: rgb(255, 255, 255);
-}
-
-.category-bar {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.category-bar-item {
-	width: 30px;
-	height: 5px;
-	background-color: #fff;
-	margin-left: 2px;
-	margin-right: 2px;
-}
-
-.validate-radio {
-	margin: 0;
-	color: red;
-	display: none;
-	font-size: 12px;
-}
-
-.validate-input {
-	margin: 0;
-	color: red;
-	display: none;
-	font-size: 12px;
-}
-
-
-/* KATEGORIE */
+.parallax{
+	background-image: var(--bgImage);
+	background-position-x: center, center;
+	background-position-y: center, center;
+	background-size: cover;
+	background-repeat-x: repeat;
+	background-repeat-y: repeat;
+	background-attachment: fixed;
+	background-origin: initial;
+	background-clip: initial;
+	background-color: initial;
+  }
+  .parallax-inner{
+	padding-top: 10vh;
+	padding-bottom: 10vh;
+  }
 
 
 
-ul{
-	display: flex;
-	list-style-type: none;
-	justify-content: center;
-}
-
-li{
-	display: inline-block;
-	margin-left: 5px;
-	margin-right: 5px;
-}
-
-.active-cat{
-	color: gold;
-}
 
 
 /* SCROLLBAR */
