--- a/css/data.css
+++ b/css/data.css
@@ -2,7 +2,7 @@ table {
 	margin-top: 20px;
 	font-family: arial, sans-serif;
 	border-collapse: collapse;
-	width: 100%;
+	/* width: 2222px; */
 }
 
 td,
