--- a/css/form.css
+++ b/css/form.css
@@ -10,6 +10,12 @@
 
 .form-container,
 .info-box {
+	/* background-color: var(--formColor); */
+	display: inline-block;
+	border-radius: 7px;
+	width: 700px;
+}
+.info-box {
 	background-color: var(--formColor);
 	display: inline-block;
 	border-radius: 7px;
@@ -17,12 +23,23 @@
 }
 
 .form-box {
-	padding: 30px 30px 0 30px;
+	/* padding: 30px 30px 0 30px; */
 }
 
 .form-object {
 	display: none;
-	margin-bottom: 40px;
+	margin-bottom: 10px;
+	background-color: var(--formColor);
+	width: 700px;
+	border-radius: 7px;
+	padding: 20px;
+}
+
+.btn-next-box{
+	background-color: var(--formColor);
+	border-radius:0 0 7px 7px ;
+	overflow: hidden;
+	padding: 0px 15px 15px 15px;
 }
 
 p {
@@ -33,6 +50,7 @@ p {
 	color: rgb(255, 255, 255);
 	margin-bottom: 20px;
 	font-weight: 700;
+	font-size: 20px;
 }
 
 .page-number {
@@ -46,17 +64,48 @@ ul {
 	list-style-type: none;
 	justify-content: center;
 	padding: 0;
+	margin: 0;
 }
 
-li {
+li:not(:nth-child(1)) {
 	display: inline-block;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+
 }
 
 .active-cat {
-	color: gold;
+	color: #FED049;
 }
+
+
+/* counter */
+.counter{
+	display: none;
+	color: #777777;
+	font-size: 20px;
+}
+
+.active-counter{
+	display: block;
+}
+
+.q-in-cat{
+	color: #777777;
+	display: inline-block;
+}
+
+.slash{
+	font-size: 12px;
+	transform: translateY(-12%);
+	display: inline-block;
+}
+
+.q-nr{
+	color: #FED049;
+	display: inline-block;
+}
+
 
 /* INFO */
 
@@ -78,7 +127,7 @@ li {
 }
 
 .info-img {
-	width: 40px;
+	width: 50px;
 	margin: 15px;
 }
 
@@ -95,4 +144,10 @@ li {
 .info-box p {
 	margin-top: 10px;
 	margin-bottom: 20px;
+}
+
+
+.last-on-page{
+	margin: 0;
+	border-radius: 7px 7px 0 0;
 }
