dodana energia domu

--- a/css/finish.css
+++ b/css/finish.css
@@ -34,13 +34,39 @@ body {
 	flex-direction: column;
 }
 
-.test {
+.finish-info {
     margin:20px;
-	width: 500px;
-	height: 200px;
+	width: 600px;
+	padding: 30px 50px;
     border-radius: 7px;
 	background-color: rgba(0, 0, 0, 0.411);
 }
+
+.finish-info-box{
+	margin-top: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+.finish-info-box p{
+	width: 200px;
+	margin-right: 50px;
+}
+
+.finish-info-box img{
+	width: 150px;
+}
+
+
+.finish-info p{
+	font-size: 13px;
+	
+}
+
+.ziemia{
+	margin-left: 50px;
+}
+
 /* ------------------Content------------- */
 
 .rating {
