--- a/css/form.css
+++ b/css/form.css
@@ -151,3 +151,40 @@ li:not(:nth-child(1)) {
 	margin: 0;
 	border-radius: 7px 7px 0 0;
 }
+
+
+/* loading */
+
+.loading{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	visibility: hidden;
+	background: #000;
+	z-index: 2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.spinner{
+	width: 100px;
+	height: 100px;
+	border: 5px solid black;
+	border-top: 6px solid gold;
+	border-radius: 100%;
+	animation: spin 1s infinite linear;
+}
+
+.loading.display {
+	visibility: visible;
+}
+
+@keyframes spin {
+	from {
+		transform: rotate(0deg)
+	}
+	to {
+		transform: rotate(360deg)
+	}
+}
