--- a/css/finish/finish_scroll.css
+++ b/css/finish/finish_scroll.css
@@ -115,3 +115,26 @@
 ::-webkit-scrollbar-track-piece {
 	background-color: transparent;
 }
+
+
+@media (min-width: 0px) and (max-width: 576px){
+    .info {
+        margin: 10px;
+        width: 300px;
+        height: 260px;
+        padding: 10px;
+        border-radius: 7px;
+        background-color: rgba(255, 255, 255, 0.9);
+        position: relative;
+        font-size: 12px;
+        overflow-y: scroll;
+    }
+
+    .btn-left{
+        display: none;
+    }
+    
+    .btn-right{
+        display: none;
+    }
+}
