--- a/css/finish/popup.css
+++ b/css/finish/popup.css
@@ -54,6 +54,10 @@
 	font-size: 29px;
 }
 
+.popup p{
+	margin-bottom: 20px;
+}
+
 
 .btn-x{
 	display: flex;
@@ -68,4 +72,27 @@
 .btn-x img:hover{
 	cursor: pointer;
 	transform: rotate(90deg);
+}
+
+
+@media (min-width: 0px) and (max-width: 576px){
+	:root{
+		--popup-width: 95vw;
+	}
+
+	.popup-box{
+		margin-top: 3vh;
+	}
+
+	.popup{
+		height: 85vh;
+	}
+
+	.popup h4{
+		font-size: 20px;
+	}
+
+	.popup p{
+		font-size: 15px;
+	}
 }
