--- a/css/main/style.css
+++ b/css/main/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700;900&display=swap");
 
-:root{
+:root {
 	--bgImage: url(../../img/transport.jpg);
 	--fontColor: rgb(255, 255, 255);
 	--headerQuestionSize: 22px;
@@ -9,8 +9,9 @@
 body {
 	background: rgb(255, 255, 255);
 	text-align: center;
-	font-family: 'Poppins', sans-serif;
-	color:var(--fontColor)
+	font-family: "Poppins", sans-serif;
+	color: var(--fontColor);
+	overflow-x: hidden;
 }
 * {
 	box-sizing: border-box;
@@ -20,11 +21,10 @@ body {
 .main-container {
 	margin-top: 50px;
 	width: 100%;
-  min-height: 75vh;
+	min-height: 75vh;
 }
 
-
-.parallax{
+.parallax {
 	background-image: var(--bgImage);
 	background-position-x: center, center;
 	background-position-y: center, center;
@@ -35,32 +35,38 @@ body {
 	background-origin: initial;
 	background-clip: initial;
 	background-color: initial;
-  }
-  .parallax-inner{
-	padding-top: 10vh;
-	padding-bottom: 10vh;
-  }
-
-
-
-
+}
+.parallax-inner {
+	padding-top: 1vh;
+	padding-bottom: 1vh;
+}
 
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
-    width: 8px;
+	width: 8px;
+	height: 0px;
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    /* border-radius: 10px; */
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	/* border-radius: 10px; */
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-::-webkit-scrollbar-track-piece{
-  background-color: transparent
+::-webkit-scrollbar-track-piece {
+	background-color: transparent;
+}
+
+
+@media (min-width: 0px) and (max-width: 576px) {
+	.main-container {
+		margin-top: 50px;
+		width: 100%;
+		min-height: 75vh;
+	}
 }
