--- a/css/finish/accordion.css
+++ b/css/finish/accordion.css
@@ -7,6 +7,15 @@
 	border-radius: 7px;
 }
 
+.accordion ul{
+	margin: 0;
+	padding: 0;
+}
+
+.accordion li{
+	list-style: none;
+}
+
 .accordion .nav {
 	position: absolute;
 	display: flex;
@@ -118,6 +127,13 @@
 	margin-top: 10px;
 }
 
+.info-box p:nth-child(2){
+	background-color: rgba(255, 95, 67, 0.096);
+	padding: 3px 7px;
+	border: 1px solid red;
+	border-radius: 7px;
+}
+
 @media (min-width: 0px) and (max-width: 576px) {
 	.accordion .nav {
 		justify-content: flex-start;
@@ -148,6 +164,11 @@
 		width: 0px;
 		height: 0;
 	}
+	.info-box p {
+		margin-left: 10px;
+		margin-right: 10px;
+	}
+
 }
 
 @media (min-width: 577px) and (max-width: 786px) {
