--- a/css/finish/info.css
+++ b/css/finish/info.css
@@ -4,41 +4,57 @@
 	padding: 30px 50px;
 	border-radius: 7px;
 	background-color: rgba(0, 0, 0, 0.411);
+	text-align: justify;
+}
+
+.finish-info h3{
+	text-align: center;
+	margin-bottom: 10px;
 }
 
 .finish-info-box {
 	margin-top: 20px;
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: center;
 }
 
 .finish-info-box img {
-	width: 120px;
+	width: 100px;
+	margin-right: 20px;
 }
 
 .finish-info p {
 	font-size: 15px;
-	font-weight: 600;
+	font-weight: 400;
+	margin-left: 20px;
 }
 .finish-info-box p {
 	width: 200px;
-	margin-right: 50px;
+	text-align: right;
+	/* margin-right: 50px; */
 	font-weight: 400;
+	font-size: 17px;
 }
 
-.ziemia {
-	margin-left: 50px;
-}
 
 @media (min-width: 0px) and (max-width: 576px){
 	.finish-info {
 		width: 90vw;
 	}
+
+	.finish-info p {
+		font-size: 13px;
+	}
+
 }
+
 
 @media (min-width: 577px) and (max-width: 1048px) {
 	.finish-info {
-		width: 80vw;
+		width: 60vw;
+	}
+	.finish-info-box {
+		justify-content:center;
 	}
 }
