--- a/css/start/start.css
+++ b/css/start/start.css
@@ -27,6 +27,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	flex-direction: column;
+	overflow-x: hidden;
 }
 
 .container {
@@ -136,22 +137,51 @@ input[type="text"]:focus {
 /* SCROLLBAR */
 
 ::-webkit-scrollbar {
-	width: 8px;
+	width: 0px;
+	height: 0px;
 }
 
-::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	/* border-radius: 10px; */
+
+/* Język */
+
+.lang{
+	margin-top: 5px;
+	font-size: 14px;
+	padding: 6px 10px;
+	background-color: #4d8748;
+	color: white;
+	border-radius: 7px 0 0 7px;
+	text-decoration: none;
+	transform: translateX(55%);
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	transition: all 0.3s;
 }
 
-::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+.lang:hover{
+	cursor: pointer;
 }
 
-::-webkit-scrollbar-track-piece {
-	background-color: transparent;
+.lang img{
+	height: 17px;
+	margin-left:4px;
 }
+
+.lang-inside{
+	display: flex;
+	align-items: center;
+	transform: scale(0.8);
+	transition: all 0.3s;
+}
+
+.lang-active{
+	transform: scale(1);
+}
+
+
+
+
 
 /* Mobile */
 
