--- a/css/finish/finish.css
+++ b/css/finish/finish.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 body {
 	background: rgb(116, 115, 115);
 	text-align: center;
@@ -47,6 +47,8 @@ body {
 }
 
 .btn-tip {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 700;
 	margin-top: 30px;
 	font-size: 18px;
 	right: 0;
