--- a/css/main/input-text.css
+++ b/css/main/input-text.css
@@ -36,11 +36,11 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type="text"] {
+input[type="text"], input[type="number"] {
 	-moz-appearance: textfield;
 }
 
-input[type="text"] {
+input[type="text"], input[type="number"] {
 	border: transparent;
 	border-bottom: 3px solid var(--inputBorderColor);
 	background-color: transparent;
@@ -51,7 +51,7 @@ input[type="text"] {
 	font-weight: 600;
 	text-align: center;
 }
-input[type="text"]:focus {
+input[type="text"]:focus, input[type="number"] {
 	outline: none;
 }
 
