--- a/css/start/start.css
+++ b/css/start/start.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
 body {
 	font-family: "Montserrat", sans-serif;
@@ -52,6 +53,7 @@ body {
 }
 
 .button-start {
+	font-family: 'Poppins', sans-serif;
 	padding: 10px 35px;
 	background-color: #4d8748;
 	border-radius: 5px;
